--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="button_height">
         48dp
     </dimen>
+    <dimen name="text_field_height">
+        48dp
+    </dimen>
 </resources>
