--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="text_field_height">
         48dp
     </dimen>
+    <dimen name="screen_padding">
+        24dp
+    </dimen>
 </resources>
